--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "own-vue",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js",
+    "watch": "npm run build --watch"
   },
   "repository": {
     "type": "git",
@@ -21,8 +24,11 @@
   },
   "homepage": "https://github.com/zgy-yy/own-vue3#readme",
   "dependencies": {
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^29.5.11",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "rollup": "^4.9.6",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
