--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "lib": ["DOM","ES6"],
-    "module": "commonjs",
+    "lib": [
+      "DOM",
+      "ES6"
+    ],
+    "module": "esnext",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "types": ["jest"],
+    "types": [
+      "jest"
+    ],
     "strictNullChecks": false
   }
 }
